setup the environment of scala-spark-mongodb